fix: collector bug and add ER and UML diagram