@@ -8,7 +8,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class LocalBookingRepository implements BookingRepository {
 
@@ -34,13 +33,13 @@ public class LocalBookingRepository implements BookingRepository {
     public List<Booking> findByUserId(long userId) {
         return bookings.values().stream()
                 .filter(b -> b.getUserId() == userId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Booking> findByShowId(long showId) {
         return bookings.values().stream()
                 .filter(b -> b.getShowId() == showId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
